DataProduct controllers and routes created
